# Bank_Telemarketing_Prediction_EDSB25_1

./: Makefile  README.md  pyproject.toml
.bankvenv/: pyvenv.cfg
.bankvenv/Scripts/: activate  activate.bat  find_similar_images.py  numba
data/processed/: test_processed.csv
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: data_preparation.ipynb  training.ipynb
scripts/: data_prep.py  evaluation.py  training.py  utils.py
